Minor spacing fixes

--- a/assets/style.css
+++ b/assets/style.css
@@ -500,7 +500,7 @@ footer p:nth-of-type(3) {
 	}
 }
 
-@media (min-width: 700px) {
+@media (min-width: 740px) {
 	.filters {
 		flex-direction: row;
 		column-gap: calc(var(--gutter)*0.5);
@@ -547,9 +547,6 @@ footer p:nth-of-type(3) {
 	.slider {
 		width: 50vw;
 	}
-	button {
-		font-size: calc(var(--font-size)*1.1);
-	}
 	button:hover, #allOptions:hover, .nav:hover,  #scrollPrompt:hover {
 		color: var(--background-color);
 		background: var(--secondary-color);
@@ -567,6 +564,9 @@ footer p:nth-of-type(3) {
 }
 
 @media (min-width: 950px) {
+	button {
+		font-size: calc(var(--font-size)*1.1);
+	}
 	#data-list {
 		display: grid;
 		grid-template-columns: 1fr 1fr 1fr;
